# Typeel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.4.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: main.ts  styles.css  welcome.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
