[package]
name = "typeel"
version = "0.1.4"
description = "A lightweight Markdown editor built with Tauri + Milkdown"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
